--- a/src/styles/components/ConfigModal.module.css
+++ b/src/styles/components/ConfigModal.module.css
@@ -12,6 +12,10 @@
   align-items: center;
 }
 
+.overlayDark {
+  background: rgba(2, 2, 2, 0.65);
+}
+
 .container {
   background: var(--white);
   width: 100%;
@@ -40,6 +44,10 @@
   filter: invert(32%) sepia(26%) saturate(3368%) hue-rotate(214deg) brightness(88%) contrast(87%);
 }
 
+.container header > img.darkmodeImg {
+  filter: invert(66%) sepia(18%) saturate(1881%) hue-rotate(63deg) brightness(102%) contrast(88%);
+}
+
 .container header button {
   position: absolute;
   right: 0.5rem;
@@ -53,7 +61,6 @@
 .container header button:hover img {
   filter: invert(29%) sepia(95%) saturate(1991%) hue-rotate(331deg) brightness(98%) contrast(86%);
 }
-
 
 /* MAIN */
 .container main {
@@ -79,10 +86,11 @@
 
   transition: all 350ms;
   cursor: pointer;
+  background:rgba(157, 158, 160, 0.4);
 }
 
 .container main div:hover {
-  background:rgba(157, 158, 160, 0.5);
+  background:rgba(157, 158, 160, 0.9);
 }
 
 .container main div img[src="/yoga.svg"] {
